--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <script src="https://webapi.amap.com/maps?v=2.0&key=59a2e514f7fe3e259e88cd938e77f5ae"></script>
   </head>
   <body>
     <div id="app"></div>
